--- a/plugins/tuya/package.json
+++ b/plugins/tuya/package.json
@@ -31,7 +31,9 @@
       ]
    },
    "dependencies": {
-      "@scrypted/sdk": "^0.3.88"
+      "@scrypted/sdk": "^0.3.88",
+      "mqtt": "^5.10.4",
+      "qrcode": "^1.5.4"
    },
    "devDependencies": {
       "@types/node": "^22.10.2",
