--- a/plugins/tuya/package.json
+++ b/plugins/tuya/package.json
@@ -22,7 +22,6 @@
       "camera"
    ],
    "scrypted": {
-      "rollup": true,
       "name": "Tuya Plugin",
       "type": "DeviceProvider",
       "interfaces": [
@@ -32,13 +31,16 @@
    },
    "dependencies": {
       "@scrypted/sdk": "^0.3.88",
+      "axios": "^1.8.4",
       "mqtt": "^5.10.4",
-      "qrcode": "^1.5.4"
+      "qrcode-svg": "^1.1.0"
    },
    "devDependencies": {
       "@types/node": "^22.10.2",
+      "@types/qrcode": "^1.5.5",
+      "@types/qrcode-svg": "^1.1.5",
       "@types/ws": "^8.18.0"
    },
-   "version": "0.1.0",
+   "version": "0.1.0-beta.1",
    "packageManager": "npm@10.9.2+sha512.8ab88f10f224a0c614cb717a7f7c30499014f77134120e9c1f0211ea3cf3397592cbe483feb38e0c4b3be1c54e347292c76a1b5edb94a3289d5448484ab8ac81"
 }
